0.0.1 (unreleased)
    * Added a readme file
    * Added the simplified BSD license