@@ -1,3 +1,5 @@
 0.0.1 (unreleased)
     * Added a readme file
     * Added the simplified BSD license
+    * Added Nose support
+    * Run tests in Travis CI
